revisions to Guidelines section and appendcies

--- a/guidelinesWP/03-chap3.Rmd
+++ b/guidelinesWP/03-chap3.Rmd
@@ -70,7 +70,7 @@ Integrated-hatchery  & $<$ 0.5 & No \\
 When assessing population status, @withlerGeneticallyBasedTargets2018 recommend the inclusion of integrated-wild populations within biological assessments under the WSP, and provisionally, integrated-transition populations (i.e., PNI  $\geqslant$ 0.5 ). Accordingly, only populations with PNI values $\geqslant$ 0.5 were included in the assessment of CU and SMU status in our case study applications. Stricter definitions of hatchery enhancement can be considered by including only populations with PNI values $\geqslant$ 0.72. In practice, applying this stricter threshold for our case study on Chinook Salmon resulted in excluding most data since reliable time-series of PNI values and spawner abundances are only available for exploitation-rate indicator populations<!--where coded-wire tags have been applied and sampled for recoveries-->, which tend to be populations with hatcheries. Adopting a threshold of $\geqslant$ 0.5, a level associated with more than half of spawners being natural origin, was the result of a trade-off between assessing remaining CU-level biodiversity and excluding significant hatchery impacts. For some populations, early periods of high enhancement can be removed from time-series and assessments can focus on recent periods without significant enhancement [@grantEvaluationUncertaintyFraser2012]. For hatcheries aimed at rebuilding critically depleted populations, production may be dominated by hatchery-origin fish for a period until abundances are above lower conservation thresholds. Guidelines on the assessment and management of these conservation hatcheries are currently being developed by DFO's Salmonid Enhancement Program, including regular assessments of the proportion of hatchery-origin spawning.
 
 
-Data used to assess hatchery contribution to spawning and estimate PNI values are associated with high uncertainties. For our case study on Chinook Salmon, <!--KH: coho uses CWTs, so perhaps just leave as WCVI chinook since this is the focus on this paragraph? Or, could add a follow-up sentence about CWT for coho?? CH: will leave for now-->proportions of hatchery-origin spawners were determined from spawning ground surveys for thermal marking on hatchery-origin salmon. When data on thermal marking were not available, coded-wire tags (CWTs) were used to identify hatchery-origin spawners, but were associated with increased uncertainty. Large interannual variability in the proportion of hatchery-origin spawners can result from natural variability in survival of hatchery- versus natural-origin spawners, low sampling rates for hatchery-origin spawners, and high observation errors, requiring decisions about temporal averaging. For WCVI Chinook, we averaged over the available time series where hatchery objectives have remained constant, though recommend further research quantifying the sources of uncertainties and evaluating the sensitivity of results to various time periods for averaging (e.g., recent generation versus entire time period). 
+Data used to assess hatchery contribution to spawning and estimate PNI values are associated with high uncertainties. For our case study on Chinook Salmon, <!--KH: coho uses CWTs, so perhaps just leave as WCVI chinook since this is the focus on this paragraph? Or, could add a follow-up sentence about CWT for coho?? CH: will leave for now-->proportions of hatchery-origin spawners were determined from spawning ground surveys for thermal marking on hatchery-origin salmon. When data on thermal marking were not available, coded-wire tags (CWTs) were used to identify hatchery-origin spawners, but were associated with increased uncertainty. Large interannual variability in the proportion of hatchery-origin spawners can result from natural variability in survival of hatchery- versus natural-origin spawners, low sampling rates for hatchery-origin spawners, and high observation errors, requiring decisions about temporal averaging. For the westcoast Vancouver Island Chinook case study, we averaged over the available time series where hatchery objectives have remained constant, though recommend further research quantifying the sources of uncertainties and evaluating the sensitivity of results to various time periods for averaging (e.g., recent generation versus entire time period). 
 
 
 In addition to guidance on biological assessments under the WSP, @withlerGeneticallyBasedTargets2018 further recommend developing biological goals for hatchery-influenced populations and documenting trade-offs between increased genetic risk to wild populations from hatchery production and increased abundance required to support other objectives. Enhancement plans are being developed for hatchery-influenced populations by DFO's Salmonid Enhancement Program, which include objectives related to PNI, harvest, assessment, and stewardship and measures to achieve objectives. Once developed, enhancement plans can be integrated with harvest and habitat planning within integrated management and/or rebuilding plans. Guidelines and methods for estimating PNI values are also being documented by DFO's Salmonid Enhancement Program (DFO, In revision)^[DFO In revision. Guidelines for Calculating the Proportionate Natural Influence Index as a Metric of the Genetic Influence of Enhanced Pacific Salmon on Wild Populations. Report of the Salmonid Enhancement Program, Vancouver, BC]. 
@@ -135,7 +135,7 @@ CH: the challenge is I had original text saying the Salmon Scanner did not incor
 (\#tab:SSmetrics)
 \end{table}
 
-\scriptsize (1) [@cosewicCOSEWICWildlifeSpecies2021; @maceQuantificationExtinctionRisk2008]; (2) [@dfoNationalConservationStrategy2005]; (3) [@holtEvaluationBenchmarksConservation2009]; (4) [@holtEvaluatingBenchmarksBiological2018]; (5) [@holtIndicatorsStatusBenchmarks2009] (6) [@grantIntegratedBiologicalStatus2013]; (7) [@porsztReliabilityIndicatorsDecline2012]
+\scriptsize (1) [@cosewicCOSEWICWildlifeSpecies2021; @maceQuantificationExtinctionRisk2008]; (2) [@ifcrtConservationStrategyCoho2006]; (3) [@holtEvaluationBenchmarksConservation2009]; (4) [@holtEvaluatingBenchmarksBiological2018]; (5) [@holtIndicatorsStatusBenchmarks2009] (6) [@grantIntegratedBiologicalStatus2013]; (7) [@porsztReliabilityIndicatorsDecline2012]
 
 
 
