--- a/guidelinesWP/05-chap5.Rmd
+++ b/guidelinesWP/05-chap5.Rmd
@@ -21,7 +21,7 @@
 
 
 
-We recommend a step-wise approach for identifying LRPs, with the proportion of component CUs with status above Red as the default method (Fig. \@ref(fig:flowchart)). This is the method recommended to meet the *Fisheries Act* requirement for LRPs, and can be applied to numerous aspects of salmon management, including hatchery, harvest, and habitat management. Aggregate abundance LRPs are presented as an option for cases in which they are required for fisheries management (e.g., locally or internationally), but are considered supplemental to the proportion of CUs with status above Red. The step-wise approach presented below considers data availability for candidate LRP methods and provides guidance when inconsistencies in status occur from applying multiple LRP methods. These steps can be adapted in the future as more methods are developed and/or these methods are further applied and evaluated across additional SMUs and contexts. These steps were developed to be consistent with the principles described in Section \@ref(principles).
+We recommend a step-wise approach for identifying LRPs, with the proportion of component CUs with status above Red as the default method (Fig. \@ref(fig:flowchart)). This is the method recommended to meet the *Fisheries Act* requirement for LRPs, and being based on the biological unit of CU, can be applied to numerous aspects of salmon management, including hatchery, harvest, and habitat management. Aggregate abundance LRPs are presented as an option for cases in which they are required for fisheries management (e.g., locally or internationally), but are considered supplemental to the proportion of CUs with status above Red. The step-wise approach presented below considers data availability for candidate LRP methods and provides guidance when inconsistencies in status occur from applying multiple LRP methods. These steps can be adapted in the future as more methods are developed and/or these methods are further applied and evaluated across additional SMUs and contexts. These steps were developed to be consistent with the principles described in Section \@ref(principles).
 <!-- CH: old colours: fill=yellow!10, fill=cyan!10, fill=magenta!10, fill=brown!10, fill=green!10, boxgray, intead of box,-->
 
 
@@ -64,14 +64,14 @@ We recommend a step-wise approach for identifying LRPs, with the proportion of c
 
 The first step is to compile CU-level data to support biological status assessments as described under the WSP [@holtIndicatorsStatusBenchmarks2009; @holtEvaluatingBenchmarksBiological2018]. These data include (but are not limited to) time-series of spawner abundances, recruitment, hatchery contributions, productivity, and biological benchmarks on spawner abundances. This step generally includes aggregating data at the spawning site or stream level to the CU level. 
 
-In some cases, finer spatial scales than CU (e.g., watersheds or subpopulations within CUs) may be considered to define serious harm to an SMU. Although CUs are the population unit of assessment and conservation required under the WSP, the distribution of spawning within CUs (e.g., among watersheds) can be an important component of status [@holtIndicatorsStatusBenchmarks2009] and these finer scales can be considered when data or supporting information allows. Distribution is a commonly cited component of salmon viability and recovery [@mcelhanyViableSalmonidPopulations2010]. When applied to the identification of recovery targets for Pacific salmon, @bradfordReviewBiologicalPrinciples2004 defined the relevant scale of distribution as spatial units that are demographically independent. As part of this definition, demographically independent was defined as population dynamics of one unit being unlikely to affect the dynamics of another, but that genetic exchange is expected to occur at greater rates than observed among populations (CUs), and would likely exceed 10 effective migrants per generation. When applying these criteria to Interior Fraser River Coho salmon, @bradfordReviewBiologicalPrinciples2004 defined subpopulations on the basis of large watersheds or lakes, or partial barriers to migration. 
+In some cases, finer spatial scales than CU (e.g., watersheds or subpopulations within CUs) may be considered to define serious harm to an SMU. Although CUs are the population unit of assessment and conservation required under the WSP, the distribution of spawning within CUs (e.g., among watersheds or subpopulations) can be an important component of status [@holtIndicatorsStatusBenchmarks2009] and these finer scales can be considered when data or supporting information allows. Distribution is a commonly cited component of salmon viability and recovery [@mcelhanyViableSalmonidPopulations2010]. When applied to the identification of recovery targets for Pacific salmon, @bradfordReviewBiologicalPrinciples2004 defined the relevant scale of distribution in units of subpopulations that are demographically independent, where population dynamics of one subpopulation is unlikely to affect the dynamics of another. Genetic exchange among subpopulations is expected to occur at greater rates than observed among CUs (or populations), and would likely exceed 10 effective migrants per generation. When applying these criteria to Interior Fraser River Coho salmon, @bradfordReviewBiologicalPrinciples2004 defined subpopulations on the basis of large watersheds or lakes, or partial barriers to migration. 
 
 We recommend that the decision on distribution and spatial scale of conservation for biological assessments be part of the peer-review process for CU and SMU assessments, and be based on biological principles of conservation and viability [e.g., as reviewed in @bradfordReviewBiologicalPrinciples2004; @mcelhanyViableSalmonidPopulations2010]. 
 
 
 Within this step, information on hatchery enhancement is used to identify populations where production is dominated by hatchery-origin fish. These populations (identified by PNI values $<$ 0.5, or expert opinion when data on the proportion of hatchery-origin spawners are not available) are generally excluded from analyses, while those that are dominated by natural-origin fish (e.g., PNI values are $\geqslant$ 0.5), are generally included [@withlerGeneticallyBasedTargets2018]. Further, where time-series of the proportion of hatchery-origin salmon on the spawning grounds are available and production is dominated by natural-origin fish, these proportions can be used to generate time-series of natural-origin recruitment for benchmark estimation and natural-origin spawners for status assessment against benchmarks. When the influence of hatchery production is removed in this way, the assessments are less sensitive to the presence of hatcheries and annual variation in hatchery practices.  
 
-Infilling among streams or spawning sites for years with missing data is commonly used when compiling CU-level spawner abundance series [e.g., see @grantEvaluationUncertaintyFraser2012; @brown2020SummaryAbundance2020]. When infilled time series are used to estimate LRPs and monitor stock status relative to LRPs, consideration should be given to the scale at which infilling is done. If LRPs are based on maintaining CU-level diversity, infilling of missing data should generally not be based on escapements from outside of the CU. Infilling among CUs increases uncertainty and may provide misleading status for the CU being infilled, if the CUs diverge in status and trends (see Step 3). In addition, hatchery enhancement should be carefully accounted for when infilling to avoid overestimating abundances when infilled numbers are based on sites that are artificially enhanced and when enhancement levels vary during the time series. 
+Infilling among streams or spawning sites for years with missing data is commonly used when compiling CU-level spawner abundance series [e.g., see @grantEvaluationUncertaintyFraser2012; @brown2020SummaryAbundance2020]. When infilled time series are used to estimate LRPs and monitor stock status relative to LRPs, consideration should be given to the scale at which infilling is done. If LRPs are based on maintaining CU-level diversity, infilling of missing data should generally not be based on escapements from outside of the CU. Infilling among CUs increases uncertainty and may provide misleading status for the CU being infilled, if CUs diverge in status and trends (see Step 3). In addition, hatchery enhancement should be carefully accounted for when infilling to avoid overestimating abundances when infilled numbers are based on sites that are artificially enhanced and when enhancement levels vary during the time series. 
 
 
 ### Step 2: Assessing CU Data Deficiency
@@ -115,7 +115,7 @@ CUs can vary in their exposure to **environmental conditions**, related to varia
 
 CUs with similar **life-history characteristics** are more likely to respond to common threats and environmental drivers in the same way compared to those with divergent characteristics. Differences in life-history characteristics have evolved among CUs as a consequence of exposure to different environmental conditions and food availability [e.g., @bourretDiversityJuvenileChinook2016]. In some cases, SMUs have been defined to align CUs with similar life-histories (e.g., Fraser Chinook where SMUs are defined in part based on dominant ages at maturity and adult run timing). In other SMUs, CUs with various life-history types are combined based on their geographic location (e.g., the Mainland Inlet Chinook SMU which contains CUs with ocean- and stream-type fish).
 
-CUs with very different **carrying capacities** may respond differently to similar threats. For example, very small CUs may be more vulnerable to moderate fishing pressure if abundances decline below critical conservation thresholds (e.g., 1500 fish, an abundance threshold within the Pacific Salmon Status Scanner), whereas larger CUs may be more resilient to common threats.  
+CUs with different **carrying capacities** may respond differently to similar threats. For example, very small CUs may be more vulnerable to moderate fishing pressure if abundances decline below critical conservation thresholds (e.g., 1500 fish, an abundance threshold within the Pacific Salmon Status Scanner), whereas larger CUs may be more resilient to common threats.  
 
 Covariation in intrinsic productivity is well documented among spatially proximate populations across Pacific salmon species [@petermanPatternsCovariationSurvival1998; @pyperSpatialCovariationSurvival2002; @dornerSpatialTemporalPatterns2018], providing some support for the use of data-rich CUs to inform CUs without data. In a meta-analysis of spawner time-series across Pacific salmon species throughout BC using data extracted from the Pacific Salmon Explorer Tool (Pacific Salmon Foundation 2020), pairwise correlations in spawner abundances among CUs within SMUs tended to be positive (Appendix \@ref(app:meta-analysis-appendix), Fig. \@ref(fig:lrp-smu-corr-plot)). 
 
@@ -133,7 +133,7 @@ In order to apply CU status-based LRPs, a lower limit on the proportion of CUs a
 This step omits decisions about how to prioritize CUs for conservation given variability in their capacity to rebuild. For some CUs the potential for rebuilding to above the Red zone may be extremely low due to natural conditions or anthropogenic threats. For example, some CUs are naturally more vulnerable to threats because of their biological characteristics (e.g., limited habitat availability) placing them in the Red zone. However, that natural vulnerability does not diminish the serious harm associated with the biodiversity loss if that CU is lost. Rebuilding may also be limited due anthropogenic threats such as climate change. Recent vulnerability assessments indicate that many salmon populations will not be resilient to climate change in the coming decades [@crozierClimateVulnerabilityAssessment2019; @crozierClimateChangeThreatens2021]. These considerations can be identified in  rebuilding potential analyses to inform decisions about where resources should be allocated in any subsequent rebuilding plan that is developed [e.g., @carwardinePriorityThreatManagement2019]. <!--CH omit: Considerations on rebuilding potential should be part of the management objectives [@kronlundConsiderationsDesignRebuilding2021] and are outside the scope of identifying LRPs. Those analyses can then inform decisions about prioritizing CUs and management actions, with various sectors, First Nations, and stakeholders.-->
 
 
-Furthermore, unlike many other marine fisheries, threats and management levers for Pacific salmon extend beyond those associated with the fisheries that underlie the definition of SMUs and LRPs. The scale of SMUs is often mismatched with the scale of dominant threats and management levers. As a result, LRPs based on 100% of CUs being above Red status may trigger the development of rebuilding plans under the Fish Stocks provisions when only a component (e.g., a single CU) requires intervention. Furthermore, the most appropriate CU-level interventions may not be related to harvest (e.g., hatcheries or habitat amelioration).  Nevertheless, we have identified 100% of CUs within the SMU should be above their benchmarks to avoid serious harm under the Fish Stocks provisions. Triggers and interventions at finer and coarser spatial scales will also be essential to sustain Pacific salmon.<!--CH: This is meant to capture the concern that we might trigger RP when CU is already being managed in other ways, and at a different scales-->
+Furthermore, unlike many other marine fisheries, threats and management levers for Pacific salmon extend beyond those associated with the fisheries that underlie the definition of SMUs and LRPs. The scale of SMUs is often incongruent with the scale of dominant threats and management levers. As a result, LRPs based on 100% of CUs being above Red status may trigger the development of rebuilding plans under the Fish Stocks provisions when only a component (e.g., a single CU) requires intervention. Furthermore, the most appropriate CU-level interventions may not be related to harvest (e.g., hatcheries or habitat amelioration).  Nevertheless, we have identified 100% of CUs within the SMU should be above their benchmarks to avoid serious harm under the Fish Stocks provisions. Triggers and interventions at finer and coarser spatial scales will also be essential to sustain Pacific salmon.<!--CH: This is meant to capture the concern that we might trigger RP when CU is already being managed in other ways, and at a different scales-->
 
 
 <!--CH: not needed??
@@ -179,7 +179,7 @@ In contrast, where data deficient CUs are not represented by CUs with data (i.e.
  & Status of data-rich CUs: all above Red status &  Status of data-rich CUs: at least one Red status \\ 
 \hline
 \endhead
-Status of data-deficient CUs can be inferred from data-rich CUs  &  Provisional SMU status above LRP & SMU status = below LRP\\
+Status of data-deficient CUs can be inferred from data-rich CUs  &  Provisional SMU status  above LRP with high uncertainty& SMU status = below LRP\\
 Status of data-deficient CUs {\it cannot} be inferred from data-rich CUs  &  SMU Status = data deficient & SMU status = below LRP\\
 
 \hline
@@ -270,7 +270,7 @@ Although DFO's Precautionary Approach Framework (2009) states that LRPs under th
 
 Guidelines for choosing among two types of aggregate abundance LRPs are described here: logistic regression LRPs and projection LRPs. These methods use either historical or projected data, respectively to identify the relationship between aggregate abundances and the probability that all CUs are above Red status. The guidelines presented at this step are based on the separate assumptions required for each method. If assumptions are not met for either method, then developing aggregate abundance LRPs that are aligned with the WSP may not be possible for the SMU. <!--However, developing and evaluating management procedures that account for CU-level status is still prudent even in the absence of aggregate abundance LRPs (Section \@ref(recommendations)).-->
 
-Both methods rely on an assumption of positive covariation in population dynamics among component CUs. If this assumption is met, then when one CU has depleted status and contributes relatively few spawners to the aggregate, it is likely that other component CUs will also have depleted status contributing few spawners to the aggregate. Similarly, if one CU is considered healthy and contributes many spawners, other CUs are more likely to be healthy too.  
+Both methods rely on an assumption of positive covariation in population dynamics among component CUs. If this assumption is met, then when one CU has depleted status and contributes relatively few spawners to the aggregate, it is likely that other component CUs will also have depleted status contributing few spawners to the aggregate. Similarly, if one CU is considered healthy and contributes many spawners, other CUs are more likely to be healthy.  
 
 Given the range of uncertainties and limitations associated with each method, the application and comparison of both methods may be prudent instead of limiting analyses to a single approach (see Step 9).
 
@@ -325,7 +325,7 @@ LRPs based on logistic regressions may not be appropriate when:
 - Threats and/or environmental drivers have changed such that CU-level benchmarks estimated from historical data are no longer meaningful, and there is no expectation that these changes will revert naturally to their preexisting state, or be achievable through management. Or, environmental drivers and threats among CUs have changed over the available time-series such that covariance in population dynamics among CUs is likely to have changed. 
 
 
-- There is only one CU in the SMU. In this case, the CU-level status equates to the SMU-level status.
+- There is only one CU in the SMU. In this case, the CU-level status represents the SMU-level status.
 
 <!--CH Tentative exclusion b/c may be implied by stepwise order, but happy to add back in:
 - Current CU-level assessments are not available. Aggregate-abundance LRPs are intended to supplement CU status-based LRPs and not replace them. In this case, there may be risk of loss of CU-level biodiversity due to infrequent extreme events not captured in the model.
@@ -378,7 +378,7 @@ Model evaluation for projection LRPs is more subjective than for logistic regres
 
 ### Step 9: Apply aggregate abundance LRPs to derive SMU-level status and compare to status against CU status-based LRPs
         
-Aggregate abundance methods are then applied to derive LRPs based on the guidance above. See Appendix \@ref(app:case-studies) and Holt et al. (In review) for example applications. When status of an SMU is inferred from aggregate abundance LRPs using a subset of CUs that are considered representative of the remaining data-deficient CUs, then the resulting status should be considered 'provisional' until the status of all component CUs can be assessed. When status of data-deficient CUs cannot be inferred from data-rich CUs, status cannot be assessed with aggregate abundance LRPs.
+Aggregate abundance methods are then applied to derive LRPs based on the guidance above. See Appendix \@ref(app:case-studies) and Holt et al. (In review) for example applications. When status of an SMU is inferred from aggregate abundance LRPs using a subset of CUs that are considered representative of the remaining data-deficient CUs, then the resulting status should be considered 'provisional' (i.e., with increased uncertainty) until the status of all component CUs can be assessed. When status of data-deficient CUs cannot be inferred from data-rich CUs, status cannot be assessed with aggregate abundance LRPs.
 
 We use generational mean spawner abundances as a basis for determining whether the SMU is above or below its LRP. A generational mean integrates status over cohorts within a generation, which are generally independent of each other because of the anadromous, semelparous life-history of Pacific salmon and the dominance of a single age-at-maturity for many stocks [@holtIndicatorsStatusBenchmarks2009; @porsztReliabilityIndicatorsDecline2012]. As a result, generational smoothing reduces noise in annual CU status determination arising from both interannual variability in CU abundances from different cohorts and annual observation error in estimated spawner abundances. It also makes our determination of LRP status consistent with the approach taken for abundance-based benchmarks in published WSP assessments [e.g., @grant2017FraserSockeye2020] and the Salmon Scanner at the CU level. Further, we recommend that SMU status be evaluated approximately every salmon generation to align with guidance for generational CU assessments under the WSP [@grantIntegratedBiologicalStatus2013; @grant2017FraserSockeye2020].
 
@@ -394,6 +394,7 @@ Using multiple analytical approaches to define LRPs is consistent with the princ
 <!--CH: the following 2 lines give a line break before the next heading-->
 \
 &nbsp;
+
 **Compare Status from Aggregate Abundance LRPs to that from CU status-based LRPs**
 
 In this step, we recommend comparing status from aggregate abundance LRPs to that obtained from CU status-based LRPs identified in Step 5. While aggregate abundance LRPs exploit observed covariation in population dynamics among component CUs, several factors can lead to a break-down in that relationship (e.g., observation errors, temporal variation in covariation, and/or infrequent extreme events). Hence, statuses from aggregate abundance LRPs may differ from those based on CU status-based LRPs. We recommend CU status-based LRPs as the default LRP to implement the Fish Stocks provisions, with aggregate abundance LRPs supplemental where required for harvest management purposes. 
