--- a/guidelinesWP/10-appendixCaseStudies.Rmd
+++ b/guidelinesWP/10-appendixCaseStudies.Rmd
@@ -8,7 +8,7 @@ After that, all subsequent sections will be turned into appendices. -->
 # CASE STUDIES {#app:case-studies}
 
 
-We illustrate the application of the candidate methods for LRPs developed in Section \@ref(est-methods) to three SMUs as case studies, evaluate sensitivity of LRPs to various assumptions, and use these applications to inform the guidelines presented in Section \@ref(guidelines). The case studies included Interior Fraser River Coho Salmon, West Coast Vancouver Island (WCVI) Chinook Salmon, and Inside South Coast Chum Salmon  (excluding Fraser River CUs), each comprised of 3-7 component CUs. These SMUs were chosen because they spanned a wide range of data types and availabilities from data-rich (Interior Fraser River Coho) to data-limited (Inside South Coast Chum). Furthermore, they varied in hatchery contributions from high (WCVI Chinook) to relatively low (Interior Fraser River Coho and Inside South Coast Chum), and two of these case studies are included in the proposed first batch of stocks to be put under regulation for the Fish Stocks provisions (Interior Fraser River Coho and WCVI Chinook). For each case study, the set of LRP methods considered is a function of available data and previously developed assessment methods for component CUs. In this section, we provide a brief description of each case study and methods applied to each. For more complete descriptions of case studies, including SMU characteristics, data sources, analysis methods, and results, see Holt et al. (in review). 
+We illustrate the application of the candidate methods for LRPs developed in Section \@ref(est-methods) to three SMUs as case studies, evaluate sensitivity of LRPs to various assumptions, and use these applications to inform the guidelines presented in Section \@ref(guidelines). The case studies included Interior Fraser River Coho Salmon, West Coast Vancouver Island (WCVI) Chinook Salmon, and Inside South Coast Chum Salmon  (excluding Fraser River CUs), each comprised of 3-7 component CUs. These SMUs were chosen because they spanned a wide range of data types and availabilities from data-rich (Interior Fraser River Coho) to data-limited (Inside South Coast Chum). Furthermore, they varied in hatchery contributions from high (WCVI Chinook) to relatively low (Interior Fraser River Coho and Inside South Coast Chum), and two of these case studies are included in the proposed first batch of stocks to be put under regulation for the Fish Stocks provisions (Interior Fraser River Coho and WCVI Chinook). For each case study, the set of LRP methods considered is a function of available data and previously developed assessment methods for component CUs. In this section, we provide a brief description of each case study and methods applied to each. For more complete descriptions of case studies, including SMU characteristics, data sources, analysis methods, and results, see @holtCaseStudyApplicationsInpress. 
 
 
 
@@ -55,7 +55,7 @@ For this case study, we further demonstrated the approach of averaging over stru
 ## WEST COAST VANCOUVER ISLAND CHINOOK
 
 
-The West Coast of Vancouver Island (WCVI) Chinook SMU consists of 3 CUs [@holtbyConservationUnitsPacific2007], 7 large inlets (or sounds), and 20 escapement indicator populations distributed across the 7 inlets and 3 CUs. Escapement indicator populations are those with relatively complete time-series of spawner abundances with consistent observation methodology [@riddellReview2001Chinook2002; @pacificsalmoncommissionPacificSalmonCommission2018]. Hatchery enhancement is a substantial component of many of these populations<!--LW: changed from stocks-->, however, only escapement indicator populations without significant hatchery enhancement (PNI $\geqslant$ 0.5) were included in our analyses (see Section \@ref(est-methods)).  Because time-series of the proportion of hatchery-origin spawners are not available for these populations<!--LW: changed from stocks-->, total spawner abundances were used in the assessment of CU and aggregate SMU level statuses, which may result in overly optimistic assessments of status relative to analyses excluding hatchery-origin fish (as in the Interior Fraser River Coho case study). Spawner abundances tend to be positively correlated among inlets within the SMU, with an average correlation of 0.28 (Figure \@ref(fig:density-cor-plot)).
+The WCVI Chinook SMU consists of 3 CUs [@holtbyConservationUnitsPacific2007], 7 large inlets (or sounds), and 20 escapement indicator populations distributed across the 7 inlets and 3 CUs. Escapement indicator populations are those with relatively complete time-series of spawner abundances with consistent observation methodology [@riddellReview2001Chinook2002; @pacificsalmoncommissionPacificSalmonCommission2018]. Hatchery enhancement is a substantial component of many of these populations<!--LW: changed from stocks-->, however, only escapement indicator populations without significant hatchery enhancement (PNI $\geqslant$ 0.5) were included in our analyses (see Section \@ref(est-methods)).  Because time-series of the proportion of hatchery-origin spawners are not available for these populations<!--LW: changed from stocks-->, total spawner abundances were used in the assessment of CU and aggregate SMU level statuses, which may result in overly optimistic assessments of status relative to analyses excluding hatchery-origin fish (as in the Interior Fraser River Coho case study). Spawner abundances tend to be positively correlated among inlets within the SMU, with an average correlation of 0.28 (Figure \@ref(fig:density-cor-plot)).
 
 
 For WCVI Chinook, inlets nested within CUs are considered an important spatial scale of biodiversity given the geographic separation of spawning habitats among inlets, and limited straying observed among inlets (D. McHugh pers. comm. DFO South Coast Stock Assessment). We therefore considered spawner abundances at the scale of inlets within CUs because of expected limited demographic exchange at this spatial scale.
@@ -67,7 +67,7 @@ Biological benchmarks have been estimated for WCVI indicator populations using a
 
 We characterized CU status in two ways for this case study, using: (1) the Pacific Salmon Status Scanner, (2) CU-level abundances relative to S~gen~ derived from watershed-area model estimates of S~REP~ and productivity derived from a life-stage specific survival model with expert opinion. We calculated two types of LRPs: CU status-based LRPs and projection LRPs. Based on CU-level assessments, there were no years in the historical data where all CUs were above the Red zone, so it was not possible to identify logistic regression LRPs.  Even though aggregate abundance LRPs are not required for harvest management of this SMU, we provide projection LRPs for illustrative purposes. Fisheries are managed based on a combination of the bilateral Canada-US management regime specified under the Pacific Salmon Treaty and local co-governance. We implemented sensitivity analyses on projection LRPs across two key uncertainties: variability in exploitation among inlets and intrinsic productivity. Further analyses exploring impacts of exploitation, variability in intrinsic productivity, and capacity are provided in Appendix D of Holt et al. in (review).
 
-We found that status was consistent across the LRP methods that were available, and with a previously published assessment. However, projection LRPs were highly sensitive to underlying population productivities. Although the base-case LRP assumes a relatively diffuse distribution of productivities aligned with the range of expert opinion, declines (by 25%) or increases (by 50%) in the distribution of productivities among inlets resulted in large changes in LRPs estimates. 
+We found that status was consistent across the LRP methods that were available, and with a previously published assessment. However, projection LRPs were highly sensitive to underlying population productivities. Although the base-case LRP assumes a relatively diffuse distribution of productivities aligned with the range of expert opinion, reductions (by 25%) or increases (by 50%) in productivities among inlets resulted in relatively large changes in LRPs estimates. 
 
 
 ## INSIDE SOUTH COAST CHUM - NON-FRASER
