--- a/guidelinesWP/bib/refs.bib
+++ b/guidelinesWP/bib/refs.bib
@@ -1867,6 +1867,23 @@ A comparison of the recovery objectives with recent historical abundances indica
 	pages = {2076--2086},
 }
 
+@article{quinnMultidecadeExperimentShows2018,
+	title = {A multidecade experiment shows that fertilization by salmon carcasses enhanced tree growth in the riparian zone},
+	volume = {99},
+	issn = {0012-9658, 1939-9170},
+	url = {https://onlinelibrary.wiley.com/doi/10.1002/ecy.2453},
+	doi = {10.1002/ecy.2453},
+	language = {en},
+	number = {11},
+	urldate = {2022-04-13},
+	journal = {Ecology},
+	author = {Quinn, Thomas P. and Helfield, James M. and Austin, Catherine S. and Hovel, Rachel A. and Bunn, Andrew G.},
+	month = nov,
+	year = {2018},
+	pages = {2433--2441},
+	file = {Full Text:C\:\\Users\\HoltC\\Zotero\\storage\\FECQFYW8\\Quinn et al. - 2018 - A multidecade experiment shows that fertilization .pdf:application/pdf},
+}
+
 @article{fieldSeaSkyImpacts2011,
 	title = {Sea to sky: impacts of residual salmon-derived nutrients on estuarine breeding bird communities},
 	volume = {278},
@@ -2005,4 +2022,60 @@ A comparison of the recovery objectives with recent historical abundances indica
 	year = {2014},
 	pages = {883--896},
 	file = {Full Text:C\:\\Users\\HoltC\\Zotero\\storage\\BJE7K2EW\\Christie et al. - 2014 - On the reproductive success of early‐generation ha.pdf:application/pdf},
+}
+
+@article{zabelSimpleAssumptionsAge2002,
+	title = {Simple assumptions on age composition lead to erroneous conclusions on the nature of density dependence in age-structured populations},
+	volume = {133},
+	issn = {0029-8549, 1432-1939},
+	url = {http://link.springer.com/10.1007/s00442-002-1051-0},
+	doi = {10.1007/s00442-002-1051-0},
+	abstract = {Ecologists have debated the nature of density dependence in natural populations for decades, and efforts to detect density dependence from time series of abundance data have paralleled these debates. Yet due to the correlative nature of time series data, these undertakings have been statistically problematic. Most analyses of density dependence have focused on simple population models (i.e., non-overlapping generations), but in reality most vertebrates exhibit more complex life histories, and this complexity has been incorporated into population models in a variety of ways. Unfortunately, adding complexity to population models can further exacerbate efforts to detect density dependence. We examined the effect of adding age structure when inadequate data exist in support; to demonstrate this effect, we adopted Pacific salmon (Oncorhynchus spp.) as our study organism. Most salmon populations are semelparous and have variable age at maturity. Salmon populations (and many other fish species populations) are typically modeled in terms of numbers of recruits arising from spawners in a given brood year. Recruits are enumerated as they return as adults to spawn, and proper assignment of recruits tc brood year requires age information. Unfortunately, while adult counts are common, detailed age information is not. A common practice is to apply long-term averages of age composition to returning adults to "reconstruct" time series of recruits. Here, by conducting simulations and analyzing data from natural populations, we demonstrated that this practice leads to a biased portrayal of density dependence by overestimating recruits from small spawning classes and underestimating recruits from large spawning classes. Also, productivity was overestimated and variance was underestimated, which could lead to overly optimistic predictions of extinction risk or overharvesting.},
+	language = {en},
+	number = {3},
+	urldate = {2022-04-23},
+	journal = {Oecologia},
+	author = {Zabel, Richard W. and Levin, Phillip S.},
+	month = nov,
+	year = {2002},
+	pages = {349--355},
+	file = {Zabel and Levin - 2002 - Simple assumptions on age composition lead to erro.pdf:C\:\\Users\\HoltC\\Zotero\\storage\\ZLLPK5I6\\Zabel and Levin - 2002 - Simple assumptions on age composition lead to erro.pdf:application/pdf},
+}
+
+@article{bradfordEffectsAgeingErrors1991,
+	title = {Effects of {Ageing} {Errors} on {Recruitment} {Time} {Series} {Estimated} from {Sequential} {Population} {Analysis}},
+	volume = {48},
+	issn = {0706-652X, 1205-7533},
+	url = {http://www.nrcresearchpress.com/doi/10.1139/f91-070},
+	doi = {10.1139/f91-070},
+	abstract = {Ageing errors can introduce considerable bias in the time series of recruitment estimated from a sequential population analysis. Simulation results indicate that mild ageing errors can halve estimates of the variance of recruitment and can introduce potentially important autocorrelations in recruitment time series. Underageing resulting from the use of unvalidated ageing techniques can affect recruitment estimates sufficiently to severely hinder studies of environmental influences on recruitment. As an additional sensitivity analysis, researchers should consider recalculating recruitment after correcting catch data for ageing errors.},
+	language = {en},
+	number = {4},
+	urldate = {2022-04-23},
+	journal = {Can. J. Fish. Aquat. Sci.},
+	author = {Bradford, Michael J.},
+	month = apr,
+	year = {1991},
+	pages = {555--558},
+	file = {Bradford - 1991 - Effects of Ageing Errors on Recruitment Time Serie.pdf:C\:\\Users\\HoltC\\Zotero\\storage\\CMFLF66E\\Bradford - 1991 - Effects of Ageing Errors on Recruitment Time Serie.pdf:application/pdf},
+}
+
+@article{dfoSouthernSalmonIntegrated2021a,
+	title = {Southern {Salmon} {Integrated} {Fisheries} {Management} {Plan}},
+	author = {DFO},
+	year = {2021},
+}
+
+@article{dfoPacificRegionFinal2021,
+	title = {Pacific {Region} {Final} {Integrated} {Fisheries} {Management} {Plan}, {June} 1, 2021 - {May} 31, 2022: {Salmon}, {Southern} {BC}},
+	volume = {2021/22. 21-2051},
+	shorttitle = {Pacific region final integrated fisheries management plan, {June} 1, 2021 - {May} 31, 2022},
+	url = {https://science-catalogue.canada.ca/record=4098007~S6},
+	language = {en},
+	urldate = {2022-04-23},
+	author = {{DFO}},
+	year = {2021},
+	note = {OCLC: 1284998845},
+	pages = {600p.},
+	file = {Canada et al. - 2021 - Pacific region final integrated fisheries manageme.pdf:C\:\\Users\\HoltC\\Zotero\\storage\\7LEWY2Y3\\Canada et al. - 2021 - Pacific region final integrated fisheries manageme.pdf:application/pdf},
 }
